<resources>
    <string name="app_name">RannastaSuomeen</string>
    <string name="products">Products</string>
    <string name="charts">Charts</string>
    <string name="drinks">Drinks</string>
    <string name="settings">Settings</string>
    <string name="cabinets">Cabinets</string>
    <string name="price">%1$s €</string>
    <string name="volume">%1$d cl</string>
    <string name="volumeUnit">Volume[%1$s]</string>
    <string name="aer">%1$s €/fsd</string>
    <string name="ppl">%1$s €/l</string>
    <string name="kpl">%1$s kpl</string>
    <string name="kpl_int">%1$d kpl</string>
    <string name="abv">%1$s%%</string>
    <string name="shots">%1$s fsd</string>
    <string name="cocktail">Cocktail</string>
    <string name="shot">Shot</string>
    <string name="punch">Punch</string>
    <string name="unmakeble">Missing Alcohol</string>
    <string name="unmakebleGrocery">Missing Groceries</string>
    <string name="tagless">Tagless</string>
    <string name="members">Members</string>
    <string name="not_shared">Not shared</string>
    <string name="remember_me">Remember me</string>
    <string name="pref_file_key">preferences</string>
    <string name="no_cabinet_selected">No cabinet selected</string>
    <string name="new_s">New</string>
    <string name="move_products">Move products</string>
    <string name="shopping_cart">Shopping cart</string>
    <string name="buy">Buy</string>
    <string name="close">Close</string>
    <string name="n_new_drinks">"%1$d new drinks"</string>
    <string name="percentage">"%1$d%%"</string>
    <string name="new_now">"%1$d with this"</string>
    <string name="new_total">"%1$d missing other mixers"</string>
    <string name="used_total">"%1$d missing alcohol"</string>
    <string name="alcoholic">Alcoholic</string>
    <string name="mixers">Mixers</string>
    <string name="new_drinks_alcohol">%1$d new drinks that need mixers</string>
    <string name="randomizer">Randomizer</string>
    <string name="include">Include</string>
    <string name="neutral">Neutral</string>
    <string name="exclude">Exclude</string>
    <string name="clear">Clear</string>
    <string name="needed_mixers">%1$d Needed mixers</string>
    <string name="needed_alcoholic">%1$d Needed alcoholic</string>
    <string name="reveal_drinks">Want to reveal the drink?</string>
    <string name="how_many">How many</string>
    <string name="allow_non_owned_alcohol">Allow Non Owned alcohol</string>
    <string name="allow_non_owned_mixers">Allow Non Owned Mixers</string>
    <string name="allow_duplicates">Allow Duplicates</string>
    <string name="ingredients">Ingredients</string>
    <string name="hide_drinks">Hide Drinks</string>
    <string name="tags">Tags</string>

    <string-array name="drinks_possible_sort">
        <item>Name</item>
        <item>Abv</item>
        <item>Price</item>
        <item>Volume</item>
        <item>Fsd</item>
        <item>Pps</item>
    </string-array>
</resources>