<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:title="@string/products"
            android:id="@+id/menuMainProducts"/>
        <item
            android:title="@string/drinks"
            android:id="@+id/menuMainDrinks"/>
        <item
            android:title="@string/charts"
            android:id="@+id/menuMainCharts"
            />
        <item
            android:title="@string/shopping_cart"
            android:id="@+id/menuMainCart"/>
    </group>
    <group android:enabled="true">
        <item
            android:title="@string/cabinets"
            android:id="@+id/menuMainStorage"/>
        <item
            android:title="@string/settings"
            android:id="@+id/menuMainSettings"/>
    </group>
</menu>