<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/menuDrinkFilterCocktail"
            android:checked="true"
            android:title="@string/cocktail"/>
        <item
            android:id="@+id/menuDrinkFilterShot"
            android:checked="true"
            android:title="@string/shot"/>
        <item
            android:id="@+id/menuDrinkFilterPunch"
            android:checked="true"
            android:title="@string/punch"/>
        <item
            android:id="@+id/menuDrinkFilterMakeable"
            android:title="@string/unmakeble"
            android:checked="true"/>
        <item
            android:id="@+id/menuDrinkFilterMakeableGrocery"
            android:title="@string/unmakebleGrocery"
            android:checked="true"/>
        <item
            android:id="@+id/menuDrinkFilterTagless"
            android:title="@string/tagless"
            android:checked="true"/>

    </group>
</menu>