<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewShoppingCartPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="15.04€"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView4" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="?colorSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewShareCabinetName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/shopping_cart"
                    android:textColor="?colorOnPrimary"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textViewShoppingCartVolume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="5.3L"
            app:layout_constraintBottom_toBottomOf="@+id/textViewShoppingCartPrice"
            app:layout_constraintStart_toEndOf="@+id/textViewShoppingCartPrice"
            app:layout_constraintTop_toTopOf="@+id/textViewShoppingCartPrice" />

        <TextView
            android:id="@+id/textViewShoppingCartPps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="0.79€/shot"
            app:layout_constraintBottom_toBottomOf="@+id/textViewShoppingCartVolume"
            app:layout_constraintStart_toEndOf="@+id/textViewShoppingCartShots"
            app:layout_constraintTop_toTopOf="@+id/textViewShoppingCartVolume"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/buttonClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewShoppingCartPrice" />

        <TextView
            android:id="@+id/textViewShoppingCartItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/kpl"
            app:layout_constraintBottom_toBottomOf="@+id/textViewShoppingCartPps"
            app:layout_constraintStart_toEndOf="@+id/textViewShoppingCartPps"
            app:layout_constraintTop_toTopOf="@+id/textViewShoppingCartPps" />

        <TextView
            android:id="@+id/textViewShoppingCartNewDrinks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/n_new_drinks"
            app:layout_constraintBottom_toBottomOf="@+id/buttonClose"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewShoppingCartPrice"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textViewShoppingCartShots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/shots"
            app:layout_constraintStart_toEndOf="@+id/textViewShoppingCartVolume"
            app:layout_constraintTop_toTopOf="@+id/textViewShoppingCartVolume" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>