<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewRandomizerMixers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/needed_mixers"
                android:textColor="?colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerViewRandomizerAlcoholic" />

            <TextView
                android:id="@+id/textViewRandomizerPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="15.04€"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardView4" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="?colorSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/randomizer"
                        android:textColor="?colorOnPrimary"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textViewRandomizerVolume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="5.3L"
                app:layout_constraintBottom_toBottomOf="@+id/textViewRandomizerPrice"
                app:layout_constraintStart_toEndOf="@+id/textViewRandomizerPrice"
                app:layout_constraintTop_toTopOf="@+id/textViewRandomizerPrice" />

            <TextView
                android:id="@+id/textViewRandomizerPps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="0.79€/shot"
                app:layout_constraintBottom_toBottomOf="@+id/textViewRandomizerVolume"
                app:layout_constraintStart_toEndOf="@+id/textViewRandomizerShots"
                app:layout_constraintTop_toTopOf="@+id/textViewRandomizerVolume"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/buttonClose"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="?colorPrimary"
                android:text="@string/close"
                android:textColor="?colorTertiary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerViewRandomizerMixers"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textViewRandomizerItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/kpl"
                app:layout_constraintBottom_toBottomOf="@+id/textViewRandomizerPps"
                app:layout_constraintStart_toEndOf="@+id/textViewRandomizerPps"
                app:layout_constraintTop_toTopOf="@+id/textViewRandomizerPps" />

            <TextView
                android:id="@+id/textViewRandomizerAlcoholic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textColor="?colorPrimary"
                android:text="@string/needed_alcoholic"
                app:layout_constraintBottom_toBottomOf="@+id/buttonClose"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewRandomizerPrice"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textViewRandomizerShots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/shots"
                app:layout_constraintStart_toEndOf="@+id/textViewRandomizerVolume"
                app:layout_constraintTop_toTopOf="@+id/textViewRandomizerVolume" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewRandomizerAlcoholic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textViewRandomizerAlcoholic"
                app:layout_constraintTop_toBottomOf="@+id/textViewRandomizerAlcoholic"
                tools:listitem="@layout/item_recipe_part" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewRandomizerMixers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textViewRandomizerMixers"
                app:layout_constraintTop_toBottomOf="@+id/textViewRandomizerMixers"
                tools:listitem="@layout/item_recipe_part" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</ScrollView>